<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/llDialogView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_insta_stickers_dialog"
        android:layout_margin="20dp"
        android:minWidth="320dp">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_close_sticker_dialog"
            android:layout_gravity="end" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvStickers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DimGray"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_marginBottom="18dp">

            <LinearLayout
                android:id="@+id/llyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgText"
                    android:layout_width="@dimen/footer_icon"
                    android:layout_height="@dimen/footer_icon"
                    android:src="@drawable/sticker_text_bg" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/footer_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyStylish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgStylish"
                    android:layout_width="@dimen/footer_icon"
                    android:layout_height="@dimen/footer_icon"
                    android:src="@drawable/sticker_stylish_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/stylish"
                    android:textColor="@color/white"
                    android:textSize="@dimen/footer_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyLove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLove"
                    android:layout_width="@dimen/footer_icon"
                    android:layout_height="@dimen/footer_icon"
                    android:src="@drawable/sticker_love_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/love"
                    android:textColor="@color/white"
                    android:textSize="@dimen/footer_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyAnimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAnimal"
                    android:layout_width="@dimen/footer_icon"
                    android:layout_height="@dimen/footer_icon"
                    android:src="@drawable/sticker_animal_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/animal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/footer_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyCartoon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCartoon"
                    android:layout_width="@dimen/footer_icon"
                    android:layout_height="@dimen/footer_icon"
                    android:src="@drawable/sticker_cartoon_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/cartoon"
                    android:textColor="@color/white"
                    android:textSize="@dimen/footer_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llyEmoji"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgEmoji"
                    android:layout_width="@dimen/footer_icon"
                    android:layout_height="@dimen/footer_icon"
                    android:src="@drawable/sticker_emoji_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/emoticons"
                    android:textColor="@color/white"
                    android:textSize="@dimen/footer_text" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>